# my_rpg

./: CMakeLists.txt  Makefile  main.c
assets/: fonts.fts  scenes.scenes  sounds.snd  textures.txrs
assets/imgs/player/player/: Sans titre 1.pfi
assets/maps/: hospital1.txt  hospital2.txt  hospital3.txt  laboratoire.txt  map.txt  pharmacie3.txt  shop.txt
include/: my.h
sources/animation/: animation.c
sources/camera/: camera_down.c  camera_left.c  camera_right.c  camera_up.c
sources/clock/: main_clock.c
sources/collision/: collision_management.c  collision_shots.c  collision_shots2.c
sources/core/: core.c  core_2.c  hover_management.c
sources/create/: create_btn.c  create_history.c  create_obj.c  create_struct.c  create_struct2.c  create_struct_sound.c  create_structweapon.c  init_inventory.c  init_linked_list.c  loading.c
sources/death/: death_management.c  death_management_2.c
sources/debug/: display_obstacles.c
sources/despawn/: despawn_management.c
sources/dialog/: dialog_management.c
sources/display/: display.c  display2.c  display3.c  display_minimap.c  display_stats.c  display_stats2.c  display_string.c
sources/dungeon/: dungeon_mechanics.c  dungeon_reset.c  go_back_city.c
sources/dungeon/dungeon_1/: go_to_scene_dungeon1.c  spawn_dungeon1.c
sources/dungeon/dungeon_2/: go_to_scene_dungeon2.c  spawn_dungeon2.c
sources/effect_graph/: do_rain.c  halo_centered_on_player.c
sources/event/: button_callback_management.c
sources/funcs/: func_shop1.c  func_shop2.c  func_shop3.c  func_shop4.c  func_shop5.c  funcs_carac.c  funcs_htp.c  funcs_in_weapon.c  funcs_in_weapon2.c  funcs_inventory.c  funcs_inventory2.c  funcs_menu.c  funcs_pause.c  funcs_sounds.c  go_to_scenes_1.c  go_to_scenes_2.c  go_to_scenes_3.c  init.c  init2.c  take_item.c
sources/hud/: hud_management.c  hud_management_2.c
sources/hunger_thirst/: hunger_thirst.c
sources/inventory/: inventory.c  inventory2.c
sources/lib/: #my_getnbr.c#  #my_put.c#  get_file.c  my_getcharstar.c  my_str_to_wa.c  my_strcat.c  my_strcmp.c  my_strcpy.c  my_strlen.c
sources/load_assets/: load_fonts.c  load_sounds.c  load_textures.c
sources/load_scenes/: get_color_type.c  get_despawn.c  get_id.c  get_offset.c  get_pos.c  get_rect.c  get_sf_color.c  get_size.c  get_state.c  get_str.c  parser_obj.c  scene_creater.c
sources/map_management/: read_map.c  read_shop_map.c
sources/minimap/: display_player.c  minimap_ig.c
sources/mobs/: animation_mob.c  collision_direction_mob.c  create_mobs.c  create_mobs_2.c  gestion_mobs.c
sources/player/: animation.c  damage_taken.c  display_xp_in_bar.c  exp_management.c  init_player.c  player_movement.c  rotation_player.c
sources/quest/: quest_1.c  quest_2.c
sources/search_car/: search_car.c
sources/shop/: displayshop.c  initshop.c  initshop2.c  initshop3.c
sources/shot/: shot_management.c  shots_types.c
sources/sound/: rect_sound.c
sources/spawning/: spawning_management.c
sources/stats/: stat_management.c
sources/teleportation/: display_tp_btn.c
sources/warning/: warning.c
sources/weapons/: init_weapons.c
