cmake_minimum_required(VERSION 3.10)
project(my_rpg_2017 C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(rpg/my_rpg_2017/include)

add_executable(my_rpg_2017
	include/my.h
	rpg/my_rpg_2017/include/my.h
	rpg/my_rpg_2017/sources/animation/animation.c
	rpg/my_rpg_2017/sources/camera/camera_down.c
	rpg/my_rpg_2017/sources/camera/camera_left.c
	rpg/my_rpg_2017/sources/camera/camera_right.c
	rpg/my_rpg_2017/sources/camera/camera_up.c
	rpg/my_rpg_2017/sources/clock/main_clock.c
	rpg/my_rpg_2017/sources/collision/collision_management.c
	rpg/my_rpg_2017/sources/collision/collision_shots.c
	rpg/my_rpg_2017/sources/collision/collision_shots2.c
	rpg/my_rpg_2017/sources/core/core.c
	rpg/my_rpg_2017/sources/core/core_2.c
	rpg/my_rpg_2017/sources/core/hover_management.c
	rpg/my_rpg_2017/sources/create/create_btn.c
	rpg/my_rpg_2017/sources/create/create_history.c
	rpg/my_rpg_2017/sources/create/create_obj.c
	rpg/my_rpg_2017/sources/create/create_struct.c
	rpg/my_rpg_2017/sources/create/create_struct2.c
	rpg/my_rpg_2017/sources/create/create_struct_sound.c
	rpg/my_rpg_2017/sources/create/create_structweapon.c
	rpg/my_rpg_2017/sources/create/init_inventory.c
	rpg/my_rpg_2017/sources/create/init_linked_list.c
	rpg/my_rpg_2017/sources/create/loading.c
	rpg/my_rpg_2017/sources/death/death_management.c
	rpg/my_rpg_2017/sources/death/death_management_2.c
	rpg/my_rpg_2017/sources/debug/display_obstacles.c
	rpg/my_rpg_2017/sources/despawn/despawn_management.c
	rpg/my_rpg_2017/sources/dialog/dialog_management.c
	rpg/my_rpg_2017/sources/display/display.c
	rpg/my_rpg_2017/sources/display/display2.c
	rpg/my_rpg_2017/sources/display/display3.c
	rpg/my_rpg_2017/sources/display/display_minimap.c
	rpg/my_rpg_2017/sources/display/display_stats.c
	rpg/my_rpg_2017/sources/display/display_stats2.c
	rpg/my_rpg_2017/sources/display/display_string.c
	rpg/my_rpg_2017/sources/dungeon/dungeon_1/go_to_scene_dungeon1.c
	rpg/my_rpg_2017/sources/dungeon/dungeon_1/spawn_dungeon1.c
	rpg/my_rpg_2017/sources/dungeon/dungeon_2/go_to_scene_dungeon2.c
	rpg/my_rpg_2017/sources/dungeon/dungeon_2/spawn_dungeon2.c
	rpg/my_rpg_2017/sources/dungeon/dungeon_mechanics.c
	rpg/my_rpg_2017/sources/dungeon/dungeon_reset.c
	rpg/my_rpg_2017/sources/dungeon/go_back_city.c
	rpg/my_rpg_2017/sources/effect_graph/do_rain.c
	rpg/my_rpg_2017/sources/effect_graph/halo_centered_on_player.c
	rpg/my_rpg_2017/sources/event/button_callback_management.c
	rpg/my_rpg_2017/sources/funcs/func_shop1.c
	rpg/my_rpg_2017/sources/funcs/func_shop2.c
	rpg/my_rpg_2017/sources/funcs/func_shop3.c
	rpg/my_rpg_2017/sources/funcs/func_shop4.c
	rpg/my_rpg_2017/sources/funcs/func_shop5.c
	rpg/my_rpg_2017/sources/funcs/funcs_carac.c
	rpg/my_rpg_2017/sources/funcs/funcs_htp.c
	rpg/my_rpg_2017/sources/funcs/funcs_in_weapon.c
	rpg/my_rpg_2017/sources/funcs/funcs_in_weapon2.c
	rpg/my_rpg_2017/sources/funcs/funcs_inventory.c
	rpg/my_rpg_2017/sources/funcs/funcs_inventory2.c
	rpg/my_rpg_2017/sources/funcs/funcs_menu.c
	rpg/my_rpg_2017/sources/funcs/funcs_pause.c
	rpg/my_rpg_2017/sources/funcs/funcs_sounds.c
	rpg/my_rpg_2017/sources/funcs/go_to_scenes_1.c
	rpg/my_rpg_2017/sources/funcs/go_to_scenes_2.c
	rpg/my_rpg_2017/sources/funcs/go_to_scenes_3.c
	rpg/my_rpg_2017/sources/funcs/init.c
	rpg/my_rpg_2017/sources/funcs/init2.c
	rpg/my_rpg_2017/sources/funcs/take_item.c
	rpg/my_rpg_2017/sources/hud/hud_management.c
	rpg/my_rpg_2017/sources/hud/hud_management_2.c
	rpg/my_rpg_2017/sources/hunger_thirst/hunger_thirst.c
	rpg/my_rpg_2017/sources/inventory/inventory.c
	rpg/my_rpg_2017/sources/inventory/inventory2.c
	rpg/my_rpg_2017/sources/lib/get_file.c
	rpg/my_rpg_2017/sources/lib/my_getcharstar.c
	rpg/my_rpg_2017/sources/lib/my_getnbr.c
	rpg/my_rpg_2017/sources/lib/my_put.c
	rpg/my_rpg_2017/sources/lib/my_str_to_wa.c
	rpg/my_rpg_2017/sources/lib/my_strcat.c
	rpg/my_rpg_2017/sources/lib/my_strcmp.c
	rpg/my_rpg_2017/sources/lib/my_strcpy.c
	rpg/my_rpg_2017/sources/lib/my_strlen.c
	rpg/my_rpg_2017/sources/load_assets/load_fonts.c
	rpg/my_rpg_2017/sources/load_assets/load_sounds.c
	rpg/my_rpg_2017/sources/load_assets/load_textures.c
	rpg/my_rpg_2017/sources/load_scenes/get_color_type.c
	rpg/my_rpg_2017/sources/load_scenes/get_despawn.c
	rpg/my_rpg_2017/sources/load_scenes/get_id.c
	rpg/my_rpg_2017/sources/load_scenes/get_offset.c
	rpg/my_rpg_2017/sources/load_scenes/get_pos.c
	rpg/my_rpg_2017/sources/load_scenes/get_rect.c
	rpg/my_rpg_2017/sources/load_scenes/get_sf_color.c
	rpg/my_rpg_2017/sources/load_scenes/get_size.c
	rpg/my_rpg_2017/sources/load_scenes/get_state.c
	rpg/my_rpg_2017/sources/load_scenes/get_str.c
	rpg/my_rpg_2017/sources/load_scenes/parser_obj.c
	rpg/my_rpg_2017/sources/load_scenes/scene_creater.c
	rpg/my_rpg_2017/sources/map_management/read_map.c
	rpg/my_rpg_2017/sources/map_management/read_shop_map.c
	rpg/my_rpg_2017/sources/minimap/display_player.c
	rpg/my_rpg_2017/sources/minimap/minimap_ig.c
	rpg/my_rpg_2017/sources/mobs/animation_mob.c
	rpg/my_rpg_2017/sources/mobs/collision_direction_mob.c
	rpg/my_rpg_2017/sources/mobs/create_mobs.c
	rpg/my_rpg_2017/sources/mobs/create_mobs_2.c
	rpg/my_rpg_2017/sources/mobs/gestion_mobs.c
	rpg/my_rpg_2017/sources/player/animation.c
	rpg/my_rpg_2017/sources/player/damage_taken.c
	rpg/my_rpg_2017/sources/player/display_xp_in_bar.c
	rpg/my_rpg_2017/sources/player/exp_management.c
	rpg/my_rpg_2017/sources/player/init_player.c
	rpg/my_rpg_2017/sources/player/player_movement.c
	rpg/my_rpg_2017/sources/player/rotation_player.c
	rpg/my_rpg_2017/sources/quest/quest_1.c
	rpg/my_rpg_2017/sources/quest/quest_2.c
	rpg/my_rpg_2017/sources/search_car/search_car.c
	rpg/my_rpg_2017/sources/shop/displayshop.c
	rpg/my_rpg_2017/sources/shop/initshop.c
	rpg/my_rpg_2017/sources/shop/initshop2.c
	rpg/my_rpg_2017/sources/shop/initshop3.c
	rpg/my_rpg_2017/sources/shot/shot_management.c
	rpg/my_rpg_2017/sources/shot/shots_types.c
	rpg/my_rpg_2017/sources/sound/rect_sound.c
	rpg/my_rpg_2017/sources/spawning/spawning_management.c
	rpg/my_rpg_2017/sources/stats/stat_management.c
	rpg/my_rpg_2017/sources/teleportation/display_tp_btn.c
	rpg/my_rpg_2017/sources/warning/warning.c
	rpg/my_rpg_2017/sources/weapons/init_weapons.c
	rpg/my_rpg_2017/main.c
	sources/animation/animation.c
	sources/camera/camera_down.c
	sources/camera/camera_left.c
	sources/camera/camera_right.c
	sources/camera/camera_up.c
	sources/clock/main_clock.c
	sources/collision/collision_management.c
	sources/collision/collision_shots.c
	sources/collision/collision_shots2.c
	sources/core/core.c
	sources/core/core_2.c
	sources/core/hover_management.c
	sources/create/create_btn.c
	sources/create/create_history.c
	sources/create/create_obj.c
	sources/create/create_struct.c
	sources/create/create_struct2.c
	sources/create/create_struct_sound.c
	sources/create/create_structweapon.c
	sources/create/init_inventory.c
	sources/create/init_linked_list.c
	sources/create/loading.c
	sources/death/death_management.c
	sources/death/death_management_2.c
	sources/debug/display_obstacles.c
	sources/despawn/despawn_management.c
	sources/dialog/dialog_management.c
	sources/display/display.c
	sources/display/display2.c
	sources/display/display3.c
	sources/display/display_minimap.c
	sources/display/display_stats.c
	sources/display/display_stats2.c
	sources/display/display_string.c
	sources/dungeon/dungeon_1/go_to_scene_dungeon1.c
	sources/dungeon/dungeon_1/spawn_dungeon1.c
	sources/dungeon/dungeon_2/go_to_scene_dungeon2.c
	sources/dungeon/dungeon_2/spawn_dungeon2.c
	sources/dungeon/dungeon_mechanics.c
	sources/dungeon/dungeon_reset.c
	sources/dungeon/go_back_city.c
	sources/effect_graph/do_rain.c
	sources/effect_graph/halo_centered_on_player.c
	sources/event/button_callback_management.c
	sources/funcs/func_shop1.c
	sources/funcs/func_shop2.c
	sources/funcs/func_shop3.c
	sources/funcs/func_shop4.c
	sources/funcs/func_shop5.c
	sources/funcs/funcs_carac.c
	sources/funcs/funcs_htp.c
	sources/funcs/funcs_in_weapon.c
	sources/funcs/funcs_in_weapon2.c
	sources/funcs/funcs_inventory.c
	sources/funcs/funcs_inventory2.c
	sources/funcs/funcs_menu.c
	sources/funcs/funcs_pause.c
	sources/funcs/funcs_sounds.c
	sources/funcs/go_to_scenes_1.c
	sources/funcs/go_to_scenes_2.c
	sources/funcs/go_to_scenes_3.c
	sources/funcs/init.c
	sources/funcs/init2.c
	sources/funcs/take_item.c
	sources/hud/hud_management.c
	sources/hud/hud_management_2.c
	sources/hunger_thirst/hunger_thirst.c
	sources/inventory/inventory.c
	sources/inventory/inventory2.c
	sources/lib/get_file.c
	sources/lib/my_getcharstar.c
	sources/lib/my_getnbr.c
	sources/lib/my_put.c
	sources/lib/my_str_to_wa.c
	sources/lib/my_strcat.c
	sources/lib/my_strcmp.c
	sources/lib/my_strcpy.c
	sources/lib/my_strlen.c
	sources/load_assets/load_fonts.c
	sources/load_assets/load_sounds.c
	sources/load_assets/load_textures.c
	sources/load_scenes/get_color_type.c
	sources/load_scenes/get_despawn.c
	sources/load_scenes/get_id.c
	sources/load_scenes/get_offset.c
	sources/load_scenes/get_pos.c
	sources/load_scenes/get_rect.c
	sources/load_scenes/get_sf_color.c
	sources/load_scenes/get_size.c
	sources/load_scenes/get_state.c
	sources/load_scenes/get_str.c
	sources/load_scenes/parser_obj.c
	sources/load_scenes/scene_creater.c
	sources/map_management/read_map.c
	sources/map_management/read_shop_map.c
	sources/minimap/display_player.c
	sources/minimap/minimap_ig.c
	sources/mobs/animation_mob.c
	sources/mobs/collision_direction_mob.c
	sources/mobs/create_mobs.c
	sources/mobs/create_mobs_2.c
	sources/mobs/gestion_mobs.c
	sources/player/animation.c
	sources/player/damage_taken.c
	sources/player/display_xp_in_bar.c
	sources/player/exp_management.c
	sources/player/init_player.c
	sources/player/player_movement.c
	sources/player/rotation_player.c
	sources/quest/quest_1.c
	sources/quest/quest_2.c
	sources/search_car/search_car.c
	sources/shop/displayshop.c
	sources/shop/initshop.c
	sources/shop/initshop2.c
	sources/shop/initshop3.c
	sources/shot/shot_management.c
	sources/shot/shots_types.c
	sources/sound/rect_sound.c
	sources/spawning/spawning_management.c
	sources/stats/stat_management.c
	sources/teleportation/display_tp_btn.c
	sources/warning/warning.c
	sources/weapons/init_weapons.c
	main.c)
